--- a/Troupe/backend/build.gradle
+++ b/Troupe/backend/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     //	Spring data JPA dependency
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     //	Spring Security dependency
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
     //	Spring Validation dependency
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     //	Spring Web dependency
