--- a/Troupe/backend/build.gradle
+++ b/Troupe/backend/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter')
     testImplementation('org.junit.jupiter:junit-jupiter-api')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
+    testImplementation 'org.mockito:mockito-core:4.6.1'
+    implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.12.10'
 
     //	Spring devtools dependency
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
