--- a/Troupe/frontend/package.json
+++ b/Troupe/frontend/package.json
@@ -51,5 +51,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://i7a804.p.ssafy.io:8443"
+  "proxy": "https://i7a804.p.ssafy.io:8443"
 }
