--- a/Troupe/frontend/package.json
+++ b/Troupe/frontend/package.json
@@ -25,6 +25,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "sweetalert2": "^11.4.28",
+    "sweetalert2-react-content": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,5 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://i7a804.p.ssafy.io:8443"
+  "proxy": "https://localhost:8443"
 }
