--- a/Troupe/frontend/package.json
+++ b/Troupe/frontend/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.8.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-query": "^3.39.2",
